<resources>
    <string name="app_name">Canary</string>
    <string name="title_login">Login</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="title_bluetooth">Bluetooth</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards applications requires Location permission to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>Canary</b> will not use this information in any way.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_enable">Enable</string>

    <string name="sensor_suite_guide_title">CAN\'T SEE YOUR SENSOR SUITE?</string>
    <string name="sensor_suite_guide_info">1. Make sure the DK is <b>turned on</b> and is connected to a power source using a micro USB cable or a coin cell is plugged in.
        \n\n2. Make sure the <b>ble_app_blinky</b> firmware and SoftDevice are flashed.</string>
    <string name="sensor_suite_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your Blinky is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="sensor_suite_guide_location_action">Enable</string>

    <string name="settings_dummy_item">Settings Item</string>
    <string name="settings_ble">Bluetooth</string>
    <string-array name="settings_items">
        <item>Bluetooth</item>
        <item>Profile</item>
        <item>Activity and Wellness</item>
        <item>App Settings</item>
        <item>Help and Support</item>
        <item>Legal</item>
        <item>Notifications</item>
        <item>Social and Sharing</item>
        <item>Third Party Apps</item>
        <item>Login</item>
        <item>Dashboard</item>
        <item>Map</item>
    </string-array>

    <string name="unknown_device">Unknown Device</string>
    <string name="title_activity_blinky">BlinkyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="state_connecting">Connecting…</string>
    <string name="state_initializing">Initializing…</string>
    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>
    <string name="button_pressed">Pressed</string>
    <string name="button_released">Released</string>
    <string name="button_unknown">Unknown</string>
</resources>