<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/fragment_horizontal_margin"
    android:paddingEnd="@dimen/fragment_vertical_margin"
    tools:ignore="ContentDescription">
    
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/fragment_horizontal_margin"
        app:srcCompat="@drawable/ic_bluetooth_disabled"/>

    <com.google.android.material.textview.MaterialTextView
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="?colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/bluetooth_disabled_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/bluetooth_disabled_info"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_enable_bluetooth"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/bluetooth_disabled_enable"/>
</LinearLayout>